<resources>
    <string name="app_name">billCalc</string>
    <string name="_18">18%</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_0">0%</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="increasenumberofpeople">IncreaseNumberOfPeople</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="_4">4</string>
    <string name="minus_sign">-</string>
    <string name="amount_of_people">Amount of People</string>
    <string name="subtract">SUBTRACT</string>
    <string name="add">ADD</string>
    <string name="uneven_split">Uneven split</string>
    <string name="even_split">Even Split</string>
    <string name="_1">1</string>
</resources>