<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373f42"
    tools:context=".Unevenly_Split_Bill">


    <Button
        android:id="@+id/fifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginBottom="576dp"
        android:backgroundTint="#02437D"
        android:text="@string/_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eighteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginBottom="576dp"
        android:backgroundTint="#02437D"
        android:text="@string/_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="576dp"
        android:backgroundTint="#02437D"

        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="576dp"
        android:backgroundTint="#02437D"
        android:text="@string/_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/billAmount"
        android:layout_width="266dp"
        android:layout_height="73dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="704dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/bill_amount"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ChangeNumberOfPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="624dp"
        android:backgroundTint="#02437D"
        android:focusable="true"
        android:text="@string/amount_of_people"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/CollapsableNumberOfPeople"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/ChangeableAmountOfPeople"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/SubtractFromNumberOfPeople"
            android:layout_width="30dp"
            android:layout_height="16dp"
            android:layout_marginTop="70dp"
            android:clickable="true"
            android:contentDescription="@string/subtract"
            android:focusable="true"
            android:src="@drawable/subtract"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/AddFromAmountOfPeople"
            android:layout_width="60dp"
            android:layout_height="57dp"
            android:contentDescription="@string/add"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginTop="53dp"
            android:src="@drawable/add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leftSideEditTextHolder"
        android:layout_width="223dp"
        android:layout_height="370dp"
        android:layout_marginBottom="204dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/rightSideEditTextHolder"
        android:layout_width="223dp"
        android:layout_height="370dp"
        android:layout_marginStart="220dp"
        android:layout_marginBottom="204dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>